# fifa-stadium-ai-2026

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.js  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  streamlit_app.py  sw.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
css/: style.css
js/: app.js  assistant.js  config.js  crowd.js  decision.js  gemini.js  navigation.js  simulation.js
tests/: index.html  test_streamlit_app.py  tests.js
